; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mqtt_suback.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mqtt_suback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }

@MG_MQTT_CMD_SUBACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_mqtt_suback(%struct.mg_connection* %0, i32* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.mg_connection*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.mg_connection* %0, %struct.mg_connection** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %12 = load i32, i32* @MG_MQTT_CMD_SUBACK, align 4
  %13 = call i32 @MG_MQTT_QOS(i32 1)
  %14 = load i64, i64* %7, align 8
  %15 = add i64 2, %14
  %16 = trunc i64 %15 to i32
  %17 = call i32 @mg_send_mqtt_header(%struct.mg_connection* %11, i32 %12, i32 %13, i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @htons(i32 %18)
  store i32 %19, i32* %10, align 4
  %20 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %21 = call i32 @mg_send(%struct.mg_connection* %20, i32* %10, i32 2)
  store i64 0, i64* %9, align 8
  br label %22

22:                                               ; preds = %32, %4
  %23 = load i64, i64* %9, align 8
  %24 = load i64, i64* %7, align 8
  %25 = icmp ult i64 %23, %24
  br i1 %25, label %26, label %35

26:                                               ; preds = %22
  %27 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i64, i64* %9, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = call i32 @mg_send(%struct.mg_connection* %27, i32* %30, i32 1)
  br label %32

32:                                               ; preds = %26
  %33 = load i64, i64* %9, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %9, align 8
  br label %22

35:                                               ; preds = %22
  ret void
}

declare dso_local i32 @mg_send_mqtt_header(%struct.mg_connection*, i32, i32, i32) #1

declare dso_local i32 @MG_MQTT_QOS(i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @mg_send(%struct.mg_connection*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
